cloudverse/k8s-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudverse
  labels:
    app: cloudverse
    environment: demo
