cloudverse/k8s-manifests/03-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: cloudverse
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              cpu:    250m
              memory: 256Mi
            limits:
              cpu:    500m
              memory: 512Mi
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "cloudverse", "-d", "cloudverse"]
            initialDelaySeconds: 30
            periodSeconds:       15
            timeoutSeconds:      5
            failureThreshold:    3
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "cloudverse", "-d", "cloudverse"]
            initialDelaySeconds: 10
            periodSeconds:       10
            timeoutSeconds:      5
            failureThreshold:    3
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
