cloudverse/k8s-manifests/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: cloudverse
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port:       5432
      targetPort: 5432
  type: ClusterIP
