cloudverse/k8s-manifests/06-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: cloudverse
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge:       1
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 565725315365.dkr.ecr.us-east-1.amazonaws.com/cloudverse/user-service:v1
          ports:
            - containerPort: 4002
          resources:
            requests:
              cpu:    100m
              memory: 128Mi
            limits:
              cpu:    300m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 15
            periodSeconds:       20
            timeoutSeconds:      5
            failureThreshold:    3
          readinessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 10
            periodSeconds:       10
            timeoutSeconds:      3
            failureThreshold:    3
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: cloudverse
spec:
  selector:
    app: user-service
  ports:
    - port:       4002
      targetPort: 4002
  type: ClusterIP
