cloudverse/k8s-manifests/07-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: cloudverse
  labels:
    app: product-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge:       1
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: 565725315365.dkr.ecr.us-east-1.amazonaws.com/cloudverse/product-service:v2
          ports:
            - containerPort: 4003
          resources:
            requests:
              cpu:    100m
              memory: 128Mi
            limits:
              cpu:    300m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 4003
            initialDelaySeconds: 15
            periodSeconds:       20
            timeoutSeconds:      5
            failureThreshold:    3
          readinessProbe:
            httpGet:
              path: /health
              port: 4003
            initialDelaySeconds: 10
            periodSeconds:       10
            timeoutSeconds:      3
            failureThreshold:    3
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: cloudverse
spec:
  selector:
    app: product-service
  ports:
    - port:       4003
      targetPort: 4003
  type: ClusterIP
