cloudverse/k8s-manifests/13-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: cloudverse
  labels:
    app: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge:       1
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: 565725315365.dkr.ecr.us-east-1.amazonaws.com/cloudverse/api-gateway:v1
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu:    100m
              memory: 128Mi
            limits:
              cpu:    300m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 15
            periodSeconds:       20
            timeoutSeconds:      5
            failureThreshold:    3
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds:       10
            timeoutSeconds:      3
            failureThreshold:    3
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: cloudverse
spec:
  selector:
    app: api-gateway
  ports:
    - port:       4000
      targetPort: 4000
  type: ClusterIP
