cloudverse/k8s-manifests/14-ui-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
  namespace: cloudverse
  labels:
    app: ui-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge:       1
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      containers:
        - name: ui-service
          image: 565725315365.dkr.ecr.us-east-1.amazonaws.com/cloudverse/ui-service:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu:    100m
              memory: 64Mi
            limits:
              cpu:    200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds:       20
            timeoutSeconds:      5
            failureThreshold:    3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds:       10
            timeoutSeconds:      3
            failureThreshold:    3
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: cloudverse
spec:
  selector:
    app: ui-service
  ports:
    - port:       3000
      targetPort: 3000
  type: ClusterIP
